css/styles.css
/*
Font size guide
h1: 48px (Poppins Semibold)
h2/logo: 32px (Poppins Semibold)
main buttons: 15px (Raleway Bold)
landing chips: 14px (Raleway Regular)
metadata chips: 12px (Raleway Regular
h4/subheader: 24px (Poppins Bold)
subtext: 24px (Poppins Semibold)
icons (desktop): 30px
small headline on metadata (h5): 18px (RalewayBold)
*/

:root {
  --color-accent: #ff971d;
  --color-light: #fff6de;
  --color-no: #c01d25;
  --color-yes: #b6ec4b;
  --color-light-grey: #efefef;
  --color-grey: #afafaf;
  --color-grey-05alpha: rgba(175, 175, 175, 0.5);
  --color-dark-grey: #484847;
  --color-dark-grey-03alpha: rgba(48, 48, 47, 0.3);
  --color-white: #fff;
  --color-black: #000;
  --header-height: 64px;
}

.hidden {
  display: none;
}

.invisible {
  visibility: hidden;
}

.no-scroll {
  overflow: hidden;
}

.inner-scroll {
  overflow-y: auto;
}

h1 {
  font-size: 48px;
  font-weight: 600;
}

h2 {
  font-size: 32px;
  font-weight: 600;
}

h4 {
  font-size: 24px;
  font-weight: 700;
}

h5 {
  font-size: 18px;
  font-weight: 700;
}

.ff-headers {
  font-family: Poppins, sans-serif;
}

.ff-main {
  font-family: Raleway, sans-serif;
}

.fw-light {
  font-weight: 300;
}

.fw-normal {
  font-weight: 400;
}

.fw-semibold {
  font-weight: 600;
}

.fw-bold {
  font-weight: 700;
}

.fs-30 {
  font-size: 30px;
}

.bg-color-accent {
  background-color: var(--color-accent);
}

.bg-color-white {
  background-color: var(--color-white);
}

.bg-color-modal-overlay {
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.8);
}

.color-white {
  color: var(--color-white);
}

.drop-shadow {
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
}

.drop-shadow-up {
  box-shadow: 0 -1px 2px 2px rgba(0, 0, 0, 0.1);
}

.light-round-border {
  border: 1px 1px 0 1px solid var(--color-grey);
  border-radius: 10px 10px 0 0;
}

.light-bottom-border {
  border-bottom: 1px solid var(--color-grey);
}

.margin-tb-3 {
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.margin-t-5 {
  margin-top: 5rem;
}

.margin-l-20p {
  margin-left: 20px;
}

.margin-r-20p {
  margin-right: 20px;
}

.fully-contained {
  width: fit-content;
  height: fit-content;
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}

.no-mobile {
  display: initial;
}

/* non functional classes */

.override-height-64 {
  height: var(--header-height);
}

.button-main-disabled {
  text-decoration: none;
  background-color: var(--color-light-grey);
  color: var(--color-grey);
  border: 3px var(--color-light-grey) solid;
  border-radius: 50px;
  padding: 1rem 2rem;
  font-size: 15px;
  font-weight: 700;
  width: 271px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.button-main {
  text-decoration: none;
  border: 3px var(--color-accent) solid;
  border-radius: 50px;
  padding: 1rem 2rem;
  font-size: 15px;
  font-weight: 700;
  width: 271px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.button-main:hover {
  filter: brightness(1.1) saturate(150%);
}

.button-main:active {
  border: 3px var(--color-accent) solid;
  background-color: var(--color-white);
  color: var(--color-accent);
}

.chips-main {
  font-size: 14px;
}

.img-main {
  height: 424px;
}

.img-main img {
  height: 100%;
  max-width: 850px;
  object-fit: contain;
}

.icon-button {
  color: var(--color-grey);

  /* height: 30px; */
}

.icon-button:hover {
  cursor: pointer;
}

.img-gallery-container {
  height: 280px;
  padding: 12px 50px;

  /* width from the col-1-3 class */
}

.img-gallery-container img {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}

.minimized {
  transform: translateY(calc((100vh - (var(--header-height) + 91px))));
}

/* Specific Element CSS rules */
img:hover {
  cursor: pointer;
}

#bottom-sheet {
  top: calc(100vh - (100vh - var(--header-height))); /* up to header height */
  z-index: 1;
  transition: transform 300ms ease 0ms;
}

#bottom-sheet::-webkit-scrollbar-track {
  border-radius: 10px;
  background-color: transparent;
}

#bottom-sheet::-webkit-scrollbar {
  width: 12px;
  background-color: transparent;
}

#bottom-sheet::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: var(--color-grey);
  background-color: var(--color-grey-05alpha);
}

#bottom-sheet::-webkit-scrollbar-thumb:active {
  border-radius: 10px;
  background-color: var(--color-dark-grey);
  background-color: var(--color-dark-grey-03alpha);
}

#bottom-sheet-header-text {
  transition: text-shadow 250ms 300ms ease-out, color 250ms 300ms ease-out;
}

#bottom-sheet-header-text.color-flash {
  text-shadow:
    rgb(255, 237, 89) 0 0 12px,
    rgb(255, 237, 89) 0 0 18px,
    rgb(255, 237, 89) 0 0 25px;
  transition-delay: 0s;
  transition-timing-function: ease-out;
  color: var(--color-accent);
}

.modal-padding {
  padding: 30px;
}

.icon::before {
  display: inline-block;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

#dislike-button {
  border-color: var(--color-no);
  background-color: var(--color-white);
  color: var(--color-no);
}

#dislike-button:active {
  border: 3px var(--color-no) solid;
  background-color: var(--color-no);
  color: var(--color-white);
}

#dislike-button::before {
  font: var(--fa-font-solid);
  content: "\f00d";

  /*
  f00d is X
  f794 is dumpster fire
  f2fe is poo
  f7a9 is cracked heart
  f165 is thumbs down

  */
}

#like-button {
  border-color: var(--color-yes);
  background-color: var(--color-yes);
  color: var(--color-white);
}

#like-button:active {
  border: 3px var(--color-yes) solid;
  background-color: var(--color-white);
  color: var(--color-yes);
}

#like-button::before {
  font: var(--fa-font-solid);
  content: "\f00c";

  /*
  f00c is check
  f1e2 is bomb
  f004 is heart
  f164 is thumbs up
  */
}

.subheader-spacing {
  margin-top: 28px;
  margin-bottom: 28px;
}

/* Media Queries */

@media only screen and (min-width: 851px) {
  /* "Desktop" experience */

  #top-logo:hover {
    cursor: pointer;

    /*
    If webkit is not available in the browser, it's recommended to have a fallback.
    https://stackoverflow.com/questions/15552082/css-rules-for-webkit-based-browsers
    Here, I'm using webkit color and adding firefox support as well. If these fail, it
    should fallback to just the default black color.
    */
    background-image:
      linear-gradient(
        25deg,
        rgba(255, 189, 53, 1) 9%,
        rgba(63, 167, 150, 1) 39%,
        rgba(130, 103, 190, 1) 81%,
        rgba(80, 32, 100, 1) 100%
      );
    color: var(--color-black);
    /* stylelint-disable-next-line property-no-vendor-prefix */
    -webkit-background-clip: text;
    /* stylelint-disable-next-line property-no-vendor-prefix */
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
  }
}

@media only screen and (max-width: 850px) {
  /* "Tablet" experience */

  h1 {
    padding-left: 20px;
    padding-right: 20px;
  }

  .img-main {
    height: 424px;
  }

  .img-main img {
    height: 100%;
    max-width: 100vw;
    object-fit: contain;
  }

  #top-logo:active {
    cursor: pointer;

    /*
      If webkit is not available in the browser, it's recommended to have a fallback.
      https://stackoverflow.com/questions/15552082/css-rules-for-webkit-based-browsers
      Here, I'm using webkit color and adding firefox support as well. If these fail, it
      should fallback to just the default black color.
      */
    background-image:
      linear-gradient(
        25deg,
        rgba(255, 189, 53, 1) 9%,
        rgba(63, 167, 150, 1) 39%,
        rgba(130, 103, 190, 1) 81%,
        rgba(80, 32, 100, 1) 100%
      );
    color: var(--color-black);
    /* stylelint-disable-next-line property-no-vendor-prefix */
    -webkit-background-clip: text;
    /* stylelint-disable-next-line property-no-vendor-prefix */
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
  }

  .modal-padding {
    padding: 20px;
  }

  #dislike-button,
  #like-button {
    width: 30vw;
    min-width: 210px;
  }
}

@media only screen and (max-width: 450px) {
  /* "Phone" experience */

  .no-mobile {
    display: none;
  }

  h1 {
    padding-left: 10px;
    padding-right: 10px;
    margin: 0;
  }

  .margin-t-5 {
    margin-top: 4rem;
  }

  .margin-t-3-mobile {
    margin-top: 3rem;
  }

  .button-main:hover {
    /* Do not brighten on mobile, hover not always implemented */
    filter: brightness(1);
  }

  .img-main {
    height: 230px;
  }

  .img-main img {
    height: 100%;
    max-width: 330px;
    object-fit: contain;
  }

  .modal-padding {
    padding: 10px;
  }

  #dislike-button,
  #like-button {
    width: 120px;
    height: 120px;
    min-width: 120px;
    border-radius: 50%;
    padding: 1rem;
  }

  #dislike-button::before,
  #like-button::before {
    font-size: 40px;
  }

  .subheader-spacing {
    margin-top: 16px;
    margin-bottom: 16px;
  }

  .minimized {
    transform: translateY(calc((100vh - (var(--header-height) + 67px))));
  }
}

